# Web_scraping_project

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt
api/: dependencies.py  main.py
app/: config.py  error_handler.py  error_handlers.py  main.py
app/database/: models.py  session.py
app/repositories/: book_repository.py
app/routers/: __init__.py  book.py  books.py  history.py  stats.py
app/schemas/: book.py
app/services/: book_service.py
books_scraper/: check_db.py  test_db.py
books_scraper/books_scraper/: constants.py  pipelines.py  settings.py
books_scraper/books_scraper/database/: __init__.py  connection.py  models.py  queries.py
books_scraper/books_scraper/spiders/: books.py
tests/: conftest.py  test_api.py  test_db.py  test_integration.py  test_pipelines.py  test_schemas.py  test_scrapper.py  test_services.py
